--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </a>
-            <div class="accordion-item-content">
+            <div class="accordion-item-content" data-id="{{_id}}">
                 <div class="content-block" style="padding-left: 65px;">
                     <p class="t-left">
                         Wettkampfart <i class="f7-icons open-detail-view" style="font-size: 14px; cursor: pointer"
@@ -37,7 +37,7 @@
                         </p>
                         <p class="t-left">
                             Athleten
-                            <a href="" class="align-right t-right button-highlight show-athletes" data-id="{{_id}}">Anzeigen
+                            <a href="" class="align-right t-right button-highlight show-athletes">Anzeigen
                                 <i class="f7-icons"
                                    style="font-size: 19px; display: inline-block; vertical-align: middle; padding-left: 5px">chevron_right</i></a>
                         </p>
@@ -48,7 +48,7 @@
                         {{/if}}
                     {{else}}
                         <p>
-                            <a href="" class="item-link list-button">Bearbeiten</a>
+                            <a href="" class="item-link list-button edit-button">Bearbeiten</a>
                         </p>
                     {{/if}}
                 </div>
