--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -11,8 +11,7 @@
                                     <div class="item-media">{{> iconOK}}</div>
                                 {{else}}
                                     <div class="item-media">
-                                        <span class="preloader"
-                                              style="position: static; margin: 0 0 0 10px; width:20px; height:20px"></span>
+                                        {{> iconPreloader}}
                                     </div>
                                 {{/if}}
                                 <div class="item-inner">
