--- a/meteor/client/components/icons.html
+++ b/meteor/client/components/icons.html
@@ -1,3 +1,8 @@
+<template name="iconPreloader">
+    <span class="preloader"
+          style="position: static; margin: 0 0 0 10px; width:20px; height:20px"></span>
+</template>
+
 <template name="iconOK">
     <svg class="icon i-ok animated {{class}}"
          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
