--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -232,7 +232,7 @@
                 {{#if showTitle title}}
                     <div class="content-block-title">{{title}}</div>{{/if}}
                 <div class="list-block">
-                    <ul>
+                    <ul class="certificate-list">
                         {{#each a in athletes}}
                             {{>result athlete=a}}
                         {{/each}}
