Output UI without rerender

--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="page-content" id="outputContentWrapper">
-
+                {{>outputContent}}
             </div>
 
             <div class="toolbar">
