--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -61,6 +61,8 @@
         </div>
     </div>
 
+    {{>startClassesPopup}}
+
     {{#each c in competitions.readOnly}}
         {{>sportTypePopup competition=c}}
     {{/each}}
