--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -2,7 +2,7 @@
     {{#with sportType}}
         <div class="autoWidthListBlock">
             <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
-                <a href="#" data-popup=".popup-{{name}}" class="link-open-st-info open-popup">
+                <a href="#" data-popup=".popup-{{old_object_name}}" class="link-open-st-info open-popup">
                     {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 12px">info</i>
                 </a>
             </div>
