--- a/meteor/client/components/icons.html
+++ b/meteor/client/components/icons.html
@@ -4,7 +4,7 @@
 </template>
 
 <template name="iconOK">
-    <svg class="icon i-ok animated {{class}}"
+    <svg class="icon i-ok {{#if not noAnimation}}animated{{/if}} {{class}}"
          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
         <circle class="i__circle" cx="26" cy="26" r="25"
                 fill="none"></circle>
@@ -14,7 +14,7 @@
 </template>
 
 <template name="iconWarn">
-    <svg class="icon i-warn animated {{class}}"
+    <svg class="icon i-warn {{#if not noAnimation}}animated{{/if}} {{class}}"
          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
         <circle class="i__circle" cx="26" cy="26" r="25"
                 fill="none"></circle>
@@ -25,7 +25,7 @@
 </template>
 
 <template name="iconErr">
-    <svg class="icon i-err animated {{class}}" xmlns="http://www.w3.org/2000/svg"
+    <svg class="icon i-err {{#if not noAnimation}}animated{{/if}} {{class}}" xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 52 52">
         <circle class="i__circle" cx="26" cy="26" r="25"
                 fill="none"></circle>
@@ -36,7 +36,7 @@
 </template>
 
 <template name="iconReady">
-    <svg class="icon i-ready animated {{class}}"
+    <svg class="icon i-ready {{#if not noAnimation}}animated{{/if}} {{class}}"
          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
         <circle class="i__circle" cx="26" cy="26" r="25"
                 fill="none"></circle>
