--- a/meteor/client/components/output/resultCollapse.css
+++ b/meteor/client/components/output/resultCollapse.css
@@ -1,9 +1,9 @@
 .collapsible {
     overflow: hidden;
-    -webkit-transition: max-height 1s;
-    -moz-transition: max-height 1s;
-    -ms-transition: max-height 1s;
-    -o-transition: max-height 1s;
+    /*-webkit-transition: max-height 1s;*/
+    /*-moz-transition: max-height 1s;*/
+    /*-ms-transition: max-height 1s;*/
+    /*-o-transition: max-height 1s;*/
     transition: max-height 1s;
     max-height: 4000px;
 }
@@ -13,16 +13,17 @@
 }
 
 .result-accordion {
-    overflow: hidden;
-    -webkit-transition: max-height 1s;
-    -moz-transition: max-height 1s;
-    -ms-transition: max-height 1s;
-    -o-transition: max-height 1s;
-    transition: max-height 1s;
+    /*-webkit-transition: max-height 1s;*/
+    /*-moz-transition: max-height 1s;*/
+    /*-ms-transition: max-height 1s;*/
+    /*-o-transition: max-height 1s;*/
+    /*transition: max-height 0s;*/
     max-height: 800px;
 }
 
 .result-accordion.collapsed {
+    transition: max-height 1s;
+    overflow: hidden;
     max-height: 0;
 }
 
