Added startClassesPopup functionality

--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -50,7 +50,8 @@
                                         </p>
                                         <p class="t-left">
                                             Behinderungsklasse:
-                                            <span class="align-right">{{handicap}}</span>
+                                            <span class="align-right startClassSelectOpen hover-underline">{{startClassName
+                                                    handicap}}</span>
                                         </p>
                                     {{/with}}
                                 </div>
