--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -49,7 +49,7 @@
                                             </span>
                                         </p>
                                         <p class="t-left">
-                                            Behinderungsklasse:
+                                            Startklasse:
                                             <span class="align-right startClassSelectOpen hover-underline">{{startClassName
                                                     handicap}}</span>
                                         </p>
