--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -22,7 +22,7 @@
                 </div>
             </a>
             <div class="accordion-item-content" data-id="{{_id}}">
-                <div class="content-block" style="padding-left: 65px;">
+                <div class="content-block">
                     <p class="t-left">
                         Wettkampfart <i class="f7-icons open-detail-view" style="font-size: 14px; cursor: pointer"
                                         data-id="{{type}}">info_fill</i>
