Added code generation for stations

--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -1,4 +1,5 @@
 <template name="accessCodes">
+    <a href="#" class="button button-big button-fill generateCodes">Passwörter erzeugen</a>
     <div class="autoWidthListBlock">
         {{#each g in codeGroups}}
             {{#if not (isEmpty g.codes)}}
