--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -4,8 +4,13 @@
 
             <div class="navbar">
                 <div class="navbar-inner">
-                    <div class="left"><a href="#" data-popup=".popup-help" class="open-popup"><i
-                            class="f7-icons">help</i></a></div>
+                    <div class="left">
+                        {{#if both_logged_in}}
+                            <a href="#" class="logout-button">{{last_login}} abmelden</a>
+                        {{else}}
+                            <a href="#" class="return-to-login">Übersicht</a>
+                        {{/if}}
+                    </div>
                     <div class="center truncate">
                         <div class="slider-title-wrapper">
                             <div class="slider-title-overlay"></div>
@@ -67,11 +72,7 @@
                 <div class="toolbar-inner">
                     <a href="" id="link_prev" class="item-link hideOnMobile left">Vorheriger</a>
                     <div class="item-link center">
-                        {{#if both_logged_in}}
-                            <a href="#" class="logout-button">{{last_login}} abmelden</a>
-                        {{else}}
-                            <a href="#" class="return-to-login">Übersicht</a>
-                        {{/if}}
+
                     </div>
                     <a href="" id="link_next" class="item-link hideOnMobile right">Nächster</a>
                 </div>
